update after review

--- a/source/templates/ruminations.html
+++ b/source/templates/ruminations.html
@@ -1,17 +1,18 @@
 <template id="ruminations-template">
-	<section class="bringIn">
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="row">
-					<div class="col-sm-12">
-						<header><h1><em>Ruminations</em> <small>&mdash; the things that fascinate and occupy <strong>my</strong> mind</small></h1></header>
-						<hr>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-4">
-						<h3><em>Computational</em><br><small>exploration for exploration's sake</small></h3>
-						<ul>
+    <section class="bringIn">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <header><h1><em>Ruminations</em> <small>&mdash; the things that fascinate and occupy <strong>my</strong> mind</small></h1></header>
+                        <hr>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+                        <h3><em>Computational</em><br><small>exploration for exploration's sake</small></h3>
+                        <hr>
+                        <ul>
                             <li><code>Python</code> <small>(<abbr title="id est 'that is'">i.e.</abbr> executable pseudo-code!)</small></li>
                             <li>Data Visualization
                                 <ul>
@@ -21,71 +22,75 @@
                                     <li>Map Reduce <a href="http://en.wikipedia.org/wiki/MapReduce" target="_blank"><sup>W</sup></a> type aggregating</li>
                                 </ul>
                             </li>
-				            <li>
-								Machine Learning <a href="http://en.wikipedia.org/wiki/Machine_learning" target="_blank"><sup>W</sup></a> <small>( <strong>Not</strong> Artificial Intelligence <a href="http://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank"><sup>W</sup></a>)</small>
+                            <li>
+                                Machine Learning <a href="http://en.wikipedia.org/wiki/Machine_learning" target="_blank"><sup>W</sup></a> <small>( <strong>Not</strong> Artificial Intelligence <a href="http://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank"><sup>W</sup></a>)</small>
                                 <ul>
                                     <li>Natural Language Processing <a href="http://en.wikipedia.org/wiki/Natural_language_processing" target="_blank"><sup>W</sup></a></li>
-							        <li>Genetic Algorithms <a href="http://en.wikipedia.org/wiki/Genetic_algorithm" target="_blank"><sup>W</sup></a>
+                                    <li>Genetic Algorithms <a href="http://en.wikipedia.org/wiki/Genetic_algorithm" target="_blank"><sup>W</sup></a>
                                         <ul>
                                             <li>Symbolic Regression <a href="http://en.wikipedia.org/wiki/Symbolic_regression" target="_blank"><sup>W</sup></a></li>
                                         </ul>
                                     </li>
-							        <li>Statistical Classification <a href="http://en.wikipedia.org/wiki/Statistical_classification" target="_blank"><sup>W</sup></a>
+                                    <li>Statistical Classification <a href="http://en.wikipedia.org/wiki/Statistical_classification" target="_blank"><sup>W</sup></a>
                                         <ul>
                                             <li>Clustering <a href="http://en.wikipedia.org/wiki/Cluster_analysis" target="_blank"><sup>W</sup></a></li>
                                         </ul>
                                     </li>
                                 </ul>
-							</li>
-							<li>Grapheme <a href="http://en.wikipedia.org/wiki/Grapheme" target="_blank"><sup>W</sup></a> Processing
+                            </li>
+                            <li>Grapheme <a href="http://en.wikipedia.org/wiki/Grapheme" target="_blank"><sup>W</sup></a> Processing
                                 <small>(character-based)</small>
                                 <ul>
                                     <li>Regular Expressions <a href="http://en.wikipedia.org/wiki/Regular_Expressions" target="_blank"><sup>W</sup></a></li>
                                     <li>Syntax and Grammars</li>
                                     <li>Lexers <a href="http://en.wikipedia.org/wiki/Lexical_analysis" target="_blank"><sup>W</sup></a> and Parsers <a href="http://en.wikipedia.org/wiki/Parsing" target="_blank"><sup>W</sup></a></li>
                                 </ul>
-							</li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						<h3><em>Recreational</em><br><small>activity for activity's sake</small></h3>
-						<ul>
-							<li>Walking / Hiking</li>
-							<li>Reading</li>
-							<li>Writing (code &amp; prose)</li>
-							<li>Gardening</li>
-							<li>Cooking</li>
-							<li>Investing / Personal Finance</li>
-							<li>Curing / Fermenting Foods</li>
-							<li>Vermiculture <a href="http://en.wikipedia.org/wiki/Compost#Vermicompost" target="_blank"><sup>W</sup></a></li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						<h3><em>Philosophical</em><br><small>thought for thought's sake</small></h3>
-						<ul>
-							<li>Numbers &amp; Mathematical Relationships</li>
-							<li>Time &amp; Space
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+                        <h3><em>Recreational</em><br><small>activity for activity's sake</small></h3>
+                        <hr>
+                        <ul>
+                            <li>Walking / Hiking</li>
+                            <li>Reading</li>
+                            <li>Writing (code &amp; prose)</li>
+                            <li>Investing / Personal Finance</li>
+                            <li>Gardening</li>
+                            <li>Cooking</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+                        <h3><em>Philosophical</em><br><small>thought for thought's sake</small></h3>
+                        <hr>
+                        <ul>
+                            <li>Numbers &amp; Mathematical Relationships</li>
+                            <li>Time &amp; Space
                                 <ul>
                                     <li>Chronology <a href="http://en.wikipedia.org/wiki/Chronology" target="_blank"><sup>W</sup></a> &amp; Chronometry <a href="http://en.wikipedia.org/wiki/Chronometry" target="_blank"><sup>W</sup></a></li>
                                     <li>Navigation <small>(<abbr title="videlicet 'namely'">viz.</abbr> longitude/latitude)</small></li>
                                 </ul>
                             </li>
-							<li>Astronomy</li>
-							<li>History <small>(in general, and of everything in these lists)</small></li>
-							<li>Language<br>
+                            <li>Astronomy</li>
+                            <li>History <small>(in general, and of everything in these lists)</small></li>
+                            <li>Language<br>
                                 <small>(<abbr title="videlicet 'namely'">viz.</abbr> clever prose with interesting structure and diction)</small>
                             </li>
-							<li>Technology as an offspring of Nature</li>
-							<li>Purposeful Growth<br>
-                                <small>(<abbr title="id est 'that is'">i.e.</abbr> <em>goal oriented algorithmic expansion</em> be it plant/computer/economic/<abbr title="et cetera 'and so forth'">etc.</abbr> based)</small>
+                            <li>Technology as an offspring of Nature</li>
+                            <li>Purposeful Growth<br>
+                                <small>(<abbr title="id est 'that is'">i.e.</abbr> <em>goal oriented algorithmic expansion</em> be it plant/computer/economic/<abbr title="et cetera 'and so forth'">etc.</abbr>)</small>
                             </li>
                             <!--  &mdash;or both&#8253;, see Lindenmayer Systems<a href="http://en.wikipedia.org/wiki/L-system" target="_blank"><sup>W</sup></a>) -->
-						</ul>
-					</div>
-				</div>
-				<hr>
+                        </ul>
+                    </div>
+                </div>
+                <hr>
                 <p class="text-center"><small>Warning: this list may change without notice.</small></p>
-			</div>
-		</div>
-	</section>
+            </div>
+        </div>
+    </section>
 </template>
