--- a/source/templates/synopsis.html
+++ b/source/templates/synopsis.html
@@ -1,25 +1,24 @@
 <template id="synopsis-template">
-	<section class="bringIn">
-		<div class="row">
-			<div class="col-sm-8 col-sm-offset-2">
-				<header><h1><em>Synopsis</em></h1></header>
+    <section class="bringIn">
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <header><h1><em>Synopsis</em></h1></header>
                 <hr>
-				<p class="lead">
-                    Starting as an electrical engineer, I have been turned into a computer scientist.  After coming across extremely interesting techniques used during graduate research, I realized abstract algorithms and data processing (<abbr title="Computer Science">CS</abbr>) are much more interesting (to me) than their specific implementations in hardware (<abbr title="Electrical Engineering">EE</abbr>) &amp; to some degree even software (<abbr title="Software Engineering">SE</abbr>).
-                    <!--(<abbr title="Principal Component Analysis">PCA</abbr>, Clustering, Genetic Algorithms)-->
+                <p class="lead">
+                    Starting as an electrical engineer, I have been turned into a computer scientist!  After coming across <span class="force-hover" title="Principal Component Analysis, Clustering, &amp; Genetic Algorithms">extremely interesting techniques</span> used during my graduate research, I realized abstract algorithms and data processing (<abbr title="Computer Science">CS</abbr>) are much more interesting (to me) than their specific actual implementations in hardware (<abbr title="Electrical Engineering">EE</abbr>) or software (<abbr title="Software Engineering">SE</abbr>).
                 </p>
                 <p>
-                    I love high-level languages &amp; algorithms that allow for development at an information/data level where <em>most</em> of the low level implementation is abstracted from the processing (enter python, stage right, playing the part of executable pseudo-code). With a good dose of client side web stack experience (<code>html</code>, <code>css</code>, <code>js</code>) for personal enjoyment, a professional history of writing low level <abbr title="Digital Signal Processing">DSP</abbr> algorithms in <code>vhdl</code> on <abbr title="Field Programmable Gate Arrays">FPGA</abbr>s, and a continued research interest in machine learning, data-mining, natural language processing via <code>python</code>, my overall skill and career focus can be summed up as computer and machine teacher, I speak their language, I convince them to do what I want.
-				</p>
-                <p>
-                    I rationalize my juxtaposed levels of experience by having an forward looking focus on the high level to drive my interests, development ideas, and future projects, while using the background of low level to stay grounded in reality and computational practicality. While I prefer the abstract processing for my future endeavors, my hardware background gives me an appreciation for the physical implementation, this becomes useful and the tool I pull out when profiling or optimizing a bottleneck. High Level is what <em>could</em> be done tomorrow, low level is what <em>can</em> be done today.
+                    I love high-level languages &amp; algorithms that allow for development at an information/data level where <em>most</em> of the low level implementation is abstracted from the processing (enter <code>python</code>, stage right, playing the part of executable pseudo-code). With a good dose of client side web stack experience (<code>html</code>, <code>css</code>, <code>js</code>) for personal enjoyment, a professional history of writing low level <abbr title="Digital Signal Processing">DSP</abbr> algorithms in <code>vhdl</code> on <abbr title="Field Programmable Gate Arrays">FPGA</abbr>s, and a continuing research interest in machine learning, data-mining, natural language processing via <code>matlab</code> or <code>python</code>, my overall skill and career focus can be summed up as computer and machine teacher/trainer. I speak their language, I convince them to do cool things.
                 </p>
                 <p>
-                You know when you read a good book or a quote from your favorite author and you find one of those sentences where you just can't believe what they were able to express with a particular sequence of words? It can be simple or complex, short or long. It was so creative, exactly what you feel and know, but so clever that you are surprised?  Your spirits rise, you say Hmm? and AH HA! simultaneously and your mind is satisfied. That is how I feel when I read and write <code>python</code>!  I can't believe what and how things can be expressed with this language.  It is beautiful.
-				</p>
-                <p>I am a digital explorer. I find an interesting symbolism in the fact that silicon valley is in california, westward expansion did not stop when we reached the ocean, it just became virtual.  Humans must still explore this new land.  Like the pioneers moving west, not knowing where they are going on a daily timeframe or how they will provide for themself, they kept pushing in one direction, eventually finding a perfect spot to settle.  This is how I work and live, I am exploring the virtual and computational landscape, I often wonder where I'm going, but it all adds up to one direction: teaching machines to do what I am incapable of.<br>Here is a <a href="posts/index.html">log</a> of my <em>travels</em>.</p>
+                    I rationalize my juxtaposed levels of experience by having an a focus on the high level to drive my interests, development ideas, and future projects, while using my background in the low level to stay grounded in reality and computational practicality. While I prefer the abstract processing for my future endeavors, my hardware background gives me an appreciation for the physical implementation, this becomes useful and the tool I pull out when profiling or optimizing a bottleneck. <s>High Level is what <em>could</em> be done tomorrow, low level is what <em>can</em> be done today.</s>
+                </p>
+                <p>
+                    You know when you read a good book or a quote from your favorite author and you find one of those sentences where you just can't believe what they were able to express with a particular sequence of words? It can be simple or complex, short or long. It was so creative, exactly what you feel and know, but so clever that you are surprised?  Your spirits rise, you say Hmm? and AH HA! simultaneously and your mind is satisfied. That is how I feel when I read and write <code>python</code>!  I can't believe what <em>and how</em> things can be expressed with this language.  It is beautiful.</p>
+                <p>
+                    I am a digital explorer. I find an interesting symbolism in the fact that silicon valley is in california, westward expansion did not stop when we reached the ocean, it just became virtual.  Humans must still explore this new land.  Like the pioneers moving west, not knowing where they are going on a daily timeframe or how they will provide for themself, they kept pushing in one direction, eventually finding a perfect spot to settle.  This is how I work and live, I am exploring the virtual and computational landscape, I often wonder where I'm going, but it all adds up to one direction: teaching machines to do what I am incapable of.<br>Here is a <a href="posts/index.html">log</a> of my <em>travels</em>.</p>
 <!--// for creating interesting and beautiful presentation layers or user interactions // the possibilities of what can be done when one learns to talk to machines are endless! -->
-			</div>
-		</div>
-	</section>
+            </div>
+        </div>
+    </section>
 </template>
