--- a/source/templates/colophon.html
+++ b/source/templates/colophon.html
@@ -16,7 +16,9 @@
                 <div>
                     <header><h1 class="text-center"><em>Colophon</em> <small>finishing touch</small></h1></header>
                     <p class="lead text-center">
-                        Coded throughout <time datetime="2015">Two Thousand Fifteen</time><br>in the southern regions of California.<br> <small>A place for the internet-facing extension of my self to reside.</small></p>
+                        Coded throughout <time datetime="2015">Two Thousand Fifteen</time><br>in the southern regions of California.
+                        <br><small>A place for the internet-facing extension of my self to reside.</small>
+                    </p>
                     <h3>Design</h3>
                     <hr>
                     <p>
@@ -152,10 +154,9 @@
                         <span class="code-font"><var>x</var> % 8 == 0</span> <span class="abs-right">(a multiple of eight)</span>,
                     </p>
                     <p>and as a last resort,</p>
-                    <p class="text-center">                   
+                    <p class="text-center">
                         <span class="code-font"><var>x</var> % 5 == 0</span> <span class="abs-right">(a multiple of five)</span>.
                     </p>
-                    <p>There is a programming pun on the <samp><a href="#!/epigraph">#!/epigraph</a></samp> <em>page</em>.</p>
                     <p>
                         There is something enjoyable about hovering over text and seeing a change, therefore, most
                          <code>&lt;a&gt;</code> tags display their <code>href</code> attribute to show where the link goes,
