--- a/source/templates/colophon.html
+++ b/source/templates/colophon.html
@@ -16,8 +16,10 @@
                 <div>
                     <header><h1 class="text-center"><em>Colophon</em> <small>finishing touch</small></h1></header>
                     <p class="lead text-center">
-                        Coded throughout <time datetime="2015">Two Thousand Fifteen</time><br>in the southern regions of California.
-                        <br><small>A place for the internet-facing extension of my self to reside.</small>
+                        Coded throughout
+                        <br><time datetime="2015">Two Thousand Fifteen</time> &amp; <time datetime="2016">Two Thousand Sixteen</time>
+                        <br>in the southern regions of California.
+                        <br><small>A place for the internet facing extension of my self to reside.</small>
                     </p>
                     <h3>Design</h3>
                     <hr>
@@ -28,7 +30,7 @@
                          still with an interactive or nested experience, seems very elegant. Being interested in Machine Learning, the idea of
                          a semantic web is wonderful; therefore, the <samp><a href="#!/resume">#!/resume</a></samp> and <samp><a href="#!/contact">#!/contact</a></samp>
                          <em>pages</em> use <a href="http://microformats.org/wiki/microformats2" target="_blank">microformat2</a> structured data.
-                         The <samp><a href="#!/projects">#!/projects</a></samp> <em>page</em> uses <code>ajax</code> calls to the <a href="https://developer.github.com/v3/">GitHub API</a> for gathering project data.
+                         The <samp><a href="#!/projects">#!/projects</a></samp> <em>page</em> uses unauthenticated <code>ajax</code> calls to the <a href="https://developer.github.com/v3/">GitHub API</a> for gathering project data.
                          All hover events and animations, less one, are implemented using <code>css</code> and <strong>not</strong> <code>JavaScript</code>.
                     </p>
                     <p>This site was <em>stitched</em> together with my own static site generator, <a href="http://tmthydvnprt.com/quilt/">quilt</a>.</p>
