--- a/source/templates/projects.html
+++ b/source/templates/projects.html
@@ -4,6 +4,12 @@
             <div class="col-sm-10 col-sm-offset-1">
                 <header><h1><em>Projects</em><small></small></h1></header>
                 <hr>
+                <p class="lead">
+                    Various personal projects I play around with.  These were created either out of curiosity, a need, or as a method to learn a new skill or concept.
+                </p>
+                <p>
+                    While I would love to focus on these more than I do, at the moment, they are all personal, unsupported and done in my spare time.  Contributions, improvement and maintenance is not guaranteed and could be random at times.  However, see something you like, want to know more, or want to provide support?  <a href="#!/contact">Please let me know</a>!
+                </p>
             </div>
         </div>
         <div class="row">
@@ -18,7 +24,7 @@
                                     <div class="iframeblock">
                                         <div>
                                             <h2>quilt</h2>
-                                            <h2><small>A <code>Python</code> based statis site <code>html</code> <em>stitcher</em>.</small></h2>
+                                            <h2><small>A <code>Python</code> based static site <code>html</code> <em>stitcher</em>.</small></h2>
                                         </div>
                                     </div>
                                         </a>
