--- a/source/templates/ruminations.html
+++ b/source/templates/ruminations.html
@@ -4,7 +4,7 @@
             <div class="col-sm-12">
                 <div class="row">
                     <div class="col-sm-12">
-                        <header><h1><em>Ruminations</em> <small>&mdash; the things that fascinate and occupy <strong>my</strong> mind</small></h1></header>
+                        <header><h1><em>Ruminations</em> <small>&mdash; basically the things I find <em>cool</em>!</small></h1></header>
                         <hr>
                     </div>
                 </div>
