--- a/source/templates/colophon.html
+++ b/source/templates/colophon.html
@@ -21,7 +21,7 @@
                         <br>in the southern regions of California.
                         <br><small>A place for the internet facing extension of my self to reside.</small>
                     </p>
-                    <h3>Design</h3>
+                    <h3 name="Design">Design <a href="#Design" class="headerlink">&para;</a></h3>
                     <hr>
                     <p>
                         The site's structure is based loosely on a book (epigraph, fliping animation, colophon, <abbr title="et cetera 'and so forth'">etc.</abbr>).
@@ -44,9 +44,9 @@
                         <li>an adapted one page routing <a href="http://benhowdle.im/building-a-backendless-web-app-in-two-hours.html" target="_blank">idea</a></li>
                     </ol>
                     <p><small>Please <a href="#!/contact">contact</a> me if something is misrepresented.</small></p>
-                    <h3>Tools</h3>
+                    <h3 name="Tools">Tools <a href="#Tools" class="headerlink">&para;</a></h3>
                     <hr>
-                    <p class="tools">A couple of extremely sophisticated abacuses and a lot of tiny modifiable stone tablets.</p>
+                    <p class="tools">A couple of extremely sophisticated abacuses and a lot of tiny modifiable stone tablets. : )</p>
                     <blockquote class="blockquote-hover">
                         <p>The thing that hath been, it is that which shall be; and that which is done is that which shall be done: <strong><u>and there is no new thing under the sun</u></strong>.</p>
                         <footer>
@@ -55,7 +55,9 @@
                             </a>
                         </footer>
                     </blockquote>
-                    <h3>Typography</h3>
+                    <p>The <em>abacuses</em> are running <a href="https://atom.io">Atom</a>, <a href="https://github.com">GitHub</a> &amp; <a href="http://jupyter.org">Jupyter</a>.</p>
+                    </ul>
+                    <h3 name="Typography">Typography <a href="#Typography" class="headerlink">&para;</a></h3>
                     <hr>
                     <p>
                         This site
@@ -103,7 +105,7 @@
                          This was accomplished with a <a href="#!/fontpy">python script</a>.
                     </p>
                     <p>The <code>line-height</code> is &radic;<span style="text-decoration: overline">2</span> = <em>1.4142135623&hellip;</em></p>
-                    <h3>Color Palette</h3>
+                    <h3 name="Color Palette">Color Palette <a href="#Color Palette" class="headerlink">&para;</a></h3>
                     <hr>
                     <p>The most prominent hexadecimal colors used throughout the site.</p>
                     <div class="row">
@@ -138,15 +140,18 @@
                             </ul>
                         </div>
                     </div>
-                    <h4>Curiosities</h4>
+                    <h3 name="Curiosities">Curiosities <a href="#Curiosities" class="headerlink">&para;</a></h3>
                     <hr>
                     <p>What's with the <code><abbr title="Uniform Resource Locator">url</abbr></code> &amp; name?</p>
                     <ol>
                         <li>consistent user name, nobody had claimed it on <em>any</em> service I needed \o/,</li>
                         <li>being interested in language and information transferred via characters, vowels are somewhat unnecessary to record, like the phoenician alphabet <a href="http://en.wikipedia.org/wiki/Phoenician_alphabet" target="_blank"><sup>W</sup></a> or any abjad <a href="http://en.wikipedia.org/wiki/Abjad" target="_blank"><sup>W</sup></a>.</li>
                     </ol>
+                    <h5>Monogram</h5>
                     <p>The <a href="#!/monogram">monogram</a> was made with tightly placed <code>html</code>/<code>css</code>. An embedded <code>base64</code> image version for the <samp><a href="#!/resume">#!/resume</a></samp> <em>page</em> was made with this really simple <a href="#!/base64imagepy">python script</a>.</p>
+                    <h5>Astronomical Navigation</h5>
                     <p>The <em>planetary menu</em> is a nod to the wonder of astronomy and a, potentially humorous, commentary to the fact that by <em>navigating</em> my website, you are metaphorically <em>navigating</em> a world I created.</p>
+                    <h5>Mathematically Aesthetic</h5>
                     <p>I find it interesting to use mathematical relationships to define numbers instead of arbitrary or aesthetic choice.  Often the mathematical becomes aesthetic. If an overall trend/equation is not used to set a group of numbers (as in the typography described above), or if only a single number is needed, I try to use something that first satisfies</p>
                     <p class="text-center">
                         <span class="code-font">log<sub>2</sub>(<var>x</var>) == <abbr title="the set of integers">&#8484;</abbr></span> <span class="abs-right">(a power of two)</span>.
@@ -159,6 +164,7 @@
                     <p class="text-center">
                         <span class="code-font"><var>x</var> % 5 == 0</span> <span class="abs-right">(a multiple of five)</span>.
                     </p>
+                    <h5>Hovering</h5>
                     <p>
                         There is something enjoyable about hovering over text and seeing a change, therefore, most
                          <code>&lt;a&gt;</code> tags display their <code>href</code> attribute to show where the link goes,
