update bio and synopsis

--- a/source/templates/synopsis.html
+++ b/source/templates/synopsis.html
@@ -6,12 +6,14 @@
                 <hr>
                 <h2>Hi!</h2>
                 <p class="lead">
-                    My name is Timothy Davenport, most call me Tim; some places I am known by <a href="http://tmthydvnprt.com">tmthydvnprt</a> (<a href="#!/colophon"><em>have a look at my site&#39;s colophon to read why</em></a>).  I am a Number Cruncher; finding or creating value in and with data.
+                    My name is Timothy Davenport, most call me Tim.
+                    <br>Some places I am known by <code>tmthydvnprt</code>.
+                    <br>I am a Number Cruncher; finding or creating value with data.
                 </p>
                 <p>
-                    I am an <del>electrical engineer</del> computer scientist, software developer, data scientist, something-of-that-nature, <del>obsessed with</del> interested in all things data: its gathering, reduction, analysis or prediction.
+
                 </p>
-                </div>
+            </div>
         </div>
     </section>
 </template>
