--- a/source/templates/synopsis.html
+++ b/source/templates/synopsis.html
@@ -11,7 +11,7 @@
                     <br>I am a Number Cruncher; finding or creating value with data.
                 </p>
                 <p>
-
+                    Want to see some <a href="#!/data">random data</a> on me?
                 </p>
             </div>
         </div>
