--- a/source/templates/data.html
+++ b/source/templates/data.html
@@ -6,7 +6,7 @@
             </header>
             <hr>
             <div>
-                <p class="lead">Here are some fun personal fact &amp; figures!</p>
+                <p class="lead">Here are some fun facts &amp; figures!</p>
                 <h2>Time Alive</h2>
                 <p>
                     I've been alive for about
