--- a/source/templates/synopsis.html
+++ b/source/templates/synopsis.html
@@ -7,11 +7,11 @@
                 <h2>Hi!</h2>
                 <p class="lead">
                     My name is Timothy Davenport, most call me Tim.
-                    <br>Some places I am known by <code>tmthydvnprt</code>.
+                    <br>Some places I go by <code>tmthydvnprt</code>.
                     <br>I am a Number Cruncher; finding or creating value with data.
                 </p>
                 <p>
-                    Want to see some <a href="#!/data">random data</a> on me?
+                    Want to see some <a href="#!/data">random data</a> about me?
                 </p>
             </div>
         </div>
