--- a/source/templates/colophon.html
+++ b/source/templates/colophon.html
@@ -144,14 +144,16 @@
                     <hr>
                     <p>What's with the <code><abbr title="Uniform Resource Locator">url</abbr></code> &amp; name?</p>
                     <ol>
-                        <li>consistent user name, nobody had claimed it on <em>any</em> service I needed \o/,</li>
-                        <li>being interested in language and information transferred via characters, vowels are somewhat unnecessary to record, like the phoenician alphabet <a href="http://en.wikipedia.org/wiki/Phoenician_alphabet" target="_blank"><sup>W</sup></a> or any abjad <a href="http://en.wikipedia.org/wiki/Abjad" target="_blank"><sup>W</sup></a>.</li>
+                        <li>Consistency. This particular group of letters provides a consistent and typically available user name across the services I use. &mdash; \o/</li>
+                        <li>Unique. It's my name...but not. Somewhere between a typical <em>real life</em> name and a full blown <em>internet-y</em> alias or handle.</li>
+                        <li>Ancient. Being a slight language/information-transferred-via-character nerd, vowels are somewhat unnecessary to record, like the Phoenician alphabet <a href="http://en.wikipedia.org/wiki/Phoenician_alphabet" target="_blank"><sup>W</sup></a> or any abjad <a href="http://en.wikipedia.org/wiki/Abjad" target="_blank"><sup>W</sup></a> (I took artistic license by leaving the y).</li>
+                        <li>I like it.</li>
                     </ol>
-                    <h5>Monogram</h5>
+                    <h4>Monogram</h4>
                     <p>The <a href="#!/monogram">monogram</a> was made with tightly placed <code>html</code>/<code>css</code>. An embedded <code>base64</code> image version for the <samp><a href="#!/resume">#!/resume</a></samp> <em>page</em> was made with this really simple <a href="#!/base64imagepy">python script</a>.</p>
-                    <h5>Astronomical Navigation</h5>
+                    <h4>Astronomical Navigation</h4>
                     <p>The <em>planetary menu</em> is a nod to the wonder of astronomy and a, potentially humorous, commentary to the fact that by <em>navigating</em> my website, you are metaphorically <em>navigating</em> a world I created.</p>
-                    <h5>Mathematically Aesthetic</h5>
+                    <h4>Mathematically Aesthetic</h4>
                     <p>I find it interesting to use mathematical relationships to define numbers instead of arbitrary or aesthetic choice.  Often the mathematical becomes aesthetic. If an overall trend/equation is not used to set a group of numbers (as in the typography described above), or if only a single number is needed, I try to use something that first satisfies</p>
                     <p class="text-center">
                         <span class="code-font">log<sub>2</sub>(<var>x</var>) == <abbr title="the set of integers">&#8484;</abbr></span> <span class="abs-right">(a power of two)</span>.
@@ -164,7 +166,7 @@
                     <p class="text-center">
                         <span class="code-font"><var>x</var> % 5 == 0</span> <span class="abs-right">(a multiple of five)</span>.
                     </p>
-                    <h5>Hovering</h5>
+                    <h4>Hovering</h4>
                     <p>
                         There is something enjoyable about hovering over text and seeing a change, therefore, most
                          <code>&lt;a&gt;</code> tags display their <code>href</code> attribute to show where the link goes,
