--- a/source/templates/ruminations.html
+++ b/source/templates/ruminations.html
@@ -3,8 +3,8 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="row">
-                    <div class="col-sm-12">
-                        <header><h1><em>Ruminations</em> <small>&mdash; basically the things I find <em>cool</em>!</small></h1></header>
+                    <div class="col-sm-10 col-sm-offset-1">
+                        <header><h1><em>Ruminations</em> <small>&mdash; the things I find <em>cool</em> and enjoy thinking about!</small></h1></header>
                         <hr>
                     </div>
                 </div>
